--- a/src/assets/styles/cmps/ReviewStars.scss
+++ b/src/assets/styles/cmps/ReviewStars.scss
@@ -1,13 +1,14 @@
 .stars{
     display: flex;
-    gap: 6px;
+    gap: 4px;
     align-items: center;
     // justify-content: center;
     .star{
-        height: em(14px);
-        width: em(14px);
+        height: rem(15px);
+        width: rem(15px);
     }
     .rate.padding{
-        line-height: 21px;
+        line-height: em(21px);
+        font-size: rem(14px);
     }
 }
