--- a/src/assets/styles/cmps/UserMiniDetail.scss
+++ b/src/assets/styles/cmps/UserMiniDetail.scss
@@ -1,6 +1,7 @@
 .user-mini-detail{
+    margin-block-end: em(30px);
     .owner-img-wrapper{
-        gap: 8px;
+        gap: em(16px);
         margin-bottom: em(19px);
     }
     .mini{
@@ -10,38 +11,40 @@
     }
     .contact-me{
         border-radius: 4px;
-        color: #62646a;
+        color: $dark-clr-1;
         background-color: white;
-        border: 1px solid #62646a;
-        font-size: 14px;
+        border: 1px solid $dark-clr-1;
+        font-size: rem(14px);
         font-weight: 600;
-        line-height: 14px;
-        margin: 20px 0px;
-        padding: 12px 24px;
+        line-height: rem(14px);
+        margin: em(20px) 0px;
+        padding: em(12px) em(24px);
         &:hover{
-            background: #74767e;
+            background: $dark-clr-4;
             color: white;
             border-color: transparent;
         }
     }
     .owner-description{
-        border: 1px solid #e4e5e7;
+        border: 1px solid $light-clr2;
         border-radius: .1875em;
         margin-bottom: 2.25em;
         padding: 1.5em;
         ul{
-            border-bottom: 1px solid #e4e5e7;
+            border-bottom: 1px solid $light-clr2;
             display: grid;
             grid-template-columns: 1fr 1fr;
             margin: 0 0 1.25em;
             li{
                 padding-bottom: 1em;
                 width: 50%;
+                color: $dark-clr-4;
             }
         }
         span{
             display: block;
-            line-height: 25.6px;
+            line-height: rem(25.6px);
+            color: $dark-clr-1;
         }
         span:nth-child(2n) {
            font-weight: 700;
