--- a/src/assets/styles/cmps/ReviewPreview.scss
+++ b/src/assets/styles/cmps/ReviewPreview.scss
@@ -22,7 +22,7 @@
             .flag{
                 border-radius: 0;
                 height: em(20px);
-                margin-right: .5em;
+                margin-right: em(2px);
                 width: em(20px);
             }
             span{
@@ -41,6 +41,7 @@
         font-size: .875rem;
         line-height: 1.3;
         margin-bottom: em(17px);
+
         .divider{
             border-right: 1px solid $light-clr2;
             height: 1.2142857143em;
@@ -54,13 +55,15 @@
         display: flex;
         align-items: center;
         gap: 10px;
+        font-weight: 700;
+        font-size: rem(14px);
     .thums{
         display: flex;
         cursor: pointer;
         gap:10px
     }
         img {
-          width: 14px;
+          width: em(14px);
         }
       }
 }
