"Are you sure?" Modal Created

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -68,3 +68,4 @@
 @import "cmps/DashboardCard.scss";
 @import "cmps/AddGigCard.scss";
 @import "cmps/MyGigsTable.scss";
+@import "cmps/YesNoModal.scss";
