--- a/src/assets/styles/cmps/MyGigsTable.scss
+++ b/src/assets/styles/cmps/MyGigsTable.scss
@@ -66,7 +66,7 @@
     }
 
     tr:nth-child(even) {
-        background-color: #e5e5e5;
+        background-color: $dark-clr-2;
     }
 
     tr:hover {
