--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -17,8 +17,19 @@
     
 
     .owner-details {
-        h3 {
-            padding: em(8px) em(8px) em(8px) 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        div{
+            display: flex;
+            align-items: center;
+            .gig-title{
+                margin-right: 8px;
+            }
+            .username{
+                color: $dark-clr-4;
+                font-weight: 400;
+            }
         }
 
         .star-wrapper {
