--- a/src/assets/styles/cmps/CategoryNav.scss
+++ b/src/assets/styles/cmps/CategoryNav.scss
@@ -40,6 +40,7 @@
 
                 &:first-child {
                     transition: margin 0.5s;
+                    margin-inline-start: 0;
                 }
 
                 &:last-child {
@@ -63,6 +64,12 @@
 
             .nav-btn {
                 display: block;
+                transition: opacity 0.3s;
+
+                &.hidden {
+                    opacity: 0;
+                    pointer-events: none;
+                }
             }
 
             .categories-container {
