--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -45,8 +45,9 @@ $list-subtitle-clr: #b2b2b2;
 $shadow-clr: #b2b3b681;
 
 
-//Img Carousel
+//Sizes
 $arrow-btn-size: 48px;
+$card-carousel-height: 345px;
 
 // Breakpoints
 $mobile-breakpoint: 600px;
