--- a/src/assets/styles/cmps/CategoryCard.scss
+++ b/src/assets/styles/cmps/CategoryCard.scss
@@ -1,48 +1,30 @@
 .catCard {
-    // max-width: 50%;
-    // width: auto;
-    height: em(386px);
-    // width: em(296px);
-    color: white;
-    position: relative;
-    cursor: pointer;
-    img {
-      max-width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
-    .desc {
-        position: absolute;
-        top: 18px;
-        left: 18px;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 20px;
-    }
-  
-    .title {
-        position: absolute;
-        top: 42px;
-        left: 18px;
-        font-size: 26px;
-        font-weight: 700;
-        line-height: 1.95rem;
-     
-    }
-    
+  height: em($card-carousel-height);
+  color: white;
+  position: relative;
+  cursor: pointer;
 
+  img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
-  // @media (max-width: 1197px) {
-  //   .catCard img {
-  //       /* Adjust the max-width and font-size as needed for screens up to 1197px */
-  //       max-width: 80%; /* For example, reduce the image size */
-  //   }
-  // }
-  
-  // @media (max-width: 1027px) {
-  //   .catCard img {
-  //       /* Adjust the max-width and font-size as needed for screens up to 1027px */
-  //       max-width: 60%; /* For example, further reduce the image size */
-  //   }
-  // }
+
+  .desc {
+    position: absolute;
+    top: 18px;
+    left: 18px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+
+  .title {
+    position: absolute;
+    top: 42px;
+    left: 18px;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.95rem;
+  }
+}
