Change layout grid to pixel-perfect sizes

--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -12,6 +12,7 @@
     .slider-home {
         max-width: 95vw;
         // Smaller MQs will hold:
+        // max-width: 90vw;
         // justify-self: center;
 
         .slick-slider {
