--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -11,7 +11,7 @@
         .img-container {
             width: 100%;
             height: 55%;
-            margin-block-end: rem(18px);
+            margin-block-end: rem(5px);
 
             .slick-slider {
                 .gallery-btn {
@@ -50,14 +50,12 @@
 
     }
 
-
-
     .owner-details {
         flex-direction: column;
 
         .owner-details-1 {
-            gap: rem(8px);
-            margin-bottom: rem(-4px);
+            gap: rem(16px);
+            margin-bottom: rem(6px);
         }
 
         .owner-profile-img {
@@ -73,14 +71,14 @@
     }
 
     .owner-gig-title {
-        margin-top: rem(23px);
+        margin-top: rem(20px);
         color: $dark-clr;
         display: -webkit-box;
         line-height: rem(20.8px);
         margin-bottom: rem(8px);
         font-weight: 400;
-        min-height: 2em;
-        font-size: 1rem;
+        min-height: 2.5em;
+        font-size: rem(19px);
 
         &:hover {
             text-decoration: underline;
@@ -94,14 +92,23 @@
     }
 
     .rate-wrapper {
-        gap: rem(3px)
+        gap: rem(3px);
+        font-size: rem(18px);
+        line-height: rem(24px);
+        .owner-rate{
+            font-weight: 700;
+        }
+        .owner-number-rates{
+            color: #74767e;
+        }
     }
 
     .gig-price {
         font-weight: 700;
         line-height: rem(24px);
         margin-top: rem(8px);
-        margin-block-start: auto;
+        margin-block-start: 0.5rem;
+        font-size: rem(18px);
     }
 
 }
