Order table border looks better

--- a/src/assets/styles/cmps/OrderList.scss
+++ b/src/assets/styles/cmps/OrderList.scss
@@ -1,6 +1,7 @@
 .order-list {
     width: 50vw;
     border-collapse: collapse;
+    border: 1px solid $modal-filter-border-clr;
 
     thead {
         background-color: $light-clr;
