--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -54,8 +54,15 @@
         flex-direction: column;
 
         .owner-details-1 {
-            gap: rem(16px);
+            gap: rem(8px);
             margin-bottom: rem(6px);
+            .level-number{
+                margin-left: auto;
+                // color: #404145;
+                font-size: 1rem;
+                font-weight: 600;
+                line-height: rem(21px);
+            }
         }
 
         .owner-profile-img {
@@ -64,7 +71,7 @@
         }
 
         .owner-fullname {
-            font-size: rem(14px);
+            font-size: 1rem;
             font-weight: 700;
             line-height: rem(21px);
         }
