--- a/src/assets/styles/cmps/ReviewPreview.scss
+++ b/src/assets/styles/cmps/ReviewPreview.scss
@@ -49,6 +49,11 @@
         }
     }
     .long-txt{
+        .book-desc{
+            display: inline;
+            line-height: rem(24px);
+           
+        }
         margin-bottom: em(17px);
     }
     .helpful {
