fixing the  problem wilth the layout

--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,5 +1,5 @@
 .app-footer-container {
-    margin-inline-start: rem(120px);
+    margin-block-start: rem(120px);
     .app-footer {
         font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
         background: none;
