--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -1,20 +1,22 @@
-.call-to-action {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 12vh;
-    grid-column: 2;
-    grid-row: 2;
-    justify-self: end;
-    width: em(412px);
-    border: 1px solid $dark-clr-2;
-    padding: em(32px) em(24px);
-    margin-block-end: auto;
-    background-color: $light-clr;
+ .cta-container {
+     grid-column: 2;
+     grid-row: 2;   
+     position: sticky;
+     top: 12vh;
+     justify-self: end;
+     width: em(412px);
 
-    .package-options {
+     .package-options {
+        width: 100%;
         button {
+            flex: 1;
+            font-weight: 700;
+            border: 1px solid $modal-filter-border-clr;
+            font-size: 1em;
             background-color: $light-clr3;
             color: $dark-clr-4;
+            padding: 1em;
+
             &.selected {
                 background-color: $light-clr;
                 color: $dark-clr1;
@@ -23,97 +25,104 @@
         }
     }
 
-    .icon {
-        width: em(16px);
-    }
+     .call-to-action {
+         border: 1px solid $dark-clr-2;
+         padding: em(32px) em(24px);
+         margin-block-end: auto;
+         background-color: $light-clr;
 
-    .package-heading {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-block-end: em(32px);
+         .icon {
+             width: em(16px);
+         }
 
-        .package {
-            font-weight: 200;
-            text-transform: uppercase;
-            font-size: rem(18px);
-        }
+         .package-heading {
+             display: flex;
+             align-items: center;
+             justify-content: space-between;
+             margin-block-end: em(32px);
 
-        .price {
-            font-size: em(20px);
-            font-weight: 200;
-            letter-spacing: em(-1.6px);
-        }
-    }
+             .package {
+                 font-weight: 200;
+                 text-transform: uppercase;
+                 font-size: rem(18px);
+             }
 
-    .package-desc {
-        font-size: 1rem;
-        font-weight: 400;
-        letter-spacing: em(0.35px);
-        color: $dark-clr-1;
-    }
+             .price {
+                 font-size: em(20px);
+                 font-weight: 200;
+                 letter-spacing: em(-1.6px);
+             }
+         }
 
-    .days-container {
-        margin-block: em(10px);
-        display: flex;
-        align-items: center;
-        height: em(24px);
-        gap: em(8px);
+         .package-desc {
+             font-size: 1rem;
+             font-weight: 400;
+             letter-spacing: em(0.35px);
+             color: $dark-clr-1;
+         }
 
-        h3 {
-            font-size: em(14px);
-            color: $dark-clr-1;
-        }
-    }
+         .days-container {
+             margin-block: em(10px);
+             display: flex;
+             align-items: center;
+             height: em(24px);
+             gap: em(8px);
 
-    .feature-list {
-        margin-block-end: em(20px);
+             h3 {
+                 font-size: em(14px);
+                 color: $dark-clr-1;
+             }
+         }
 
-        .feature-container {
-            display: flex;
-            align-items: center;
-            gap: em(8px);
-            font-size: rem(14px);
-            line-height: em(24px);
-            color: $dark-clr-3;
+         .feature-list {
+             margin-block-end: em(20px);
 
-        }
-    }
+             .feature-container {
+                 display: flex;
+                 align-items: center;
+                 gap: em(8px);
+                 font-size: rem(14px);
+                 line-height: em(24px);
+                 color: $dark-clr-3;
 
-    .purchase-btn-container {
-        display: grid;
-        place-items: center;
+             }
+         }
 
-        span {
-            font-size: em(14px);
-            color: $dark-clr-1
-        }
-    }
+         .purchase-btn-container {
+             display: grid;
+             place-items: center;
 
-    .continue {
-        @include btn;
-        display: block;
-        text-align: center;
-        height: rem(42px);
-        width: 100%;
-        background-color: black;
-        font-size: em(16px);
-        font-weight: 700;
-        letter-spacing: -0.05em;
-        margin-block-end: em(12px);
-        border-radius: em(5px);
+             span {
+                 font-size: em(14px);
+                 color: $dark-clr-1
+             }
+         }
 
-        &:hover {
-            background-color: darken($dark-clr-1, 20%);
-        }
-    }
+         .continue {
+             @include btn;
+             display: block;
+             text-align: center;
+             height: rem(42px);
+             width: 100%;
+             background-color: black;
+             font-size: em(16px);
+             font-weight: 700;
+             letter-spacing: -0.05em;
+             margin-block-end: em(12px);
+             border-radius: em(5px);
 
-    .compare {
-        text-align: center;
+             &:hover {
+                 background-color: darken($dark-clr-1, 20%);
+             }
+         }
 
-        .compare-link {
-            font-size: em(14px);
-            letter-spacing: em(-0.2px);
-        }
-    }
-}
+         .compare {
+             text-align: center;
+
+             .compare-link {
+                 font-size: em(14px);
+                 letter-spacing: em(-0.2px);
+             }
+         }
+     }
+ }
