F/changing styles because customer needs

--- a/src/assets/styles/cmps/DynamicModal.scss
+++ b/src/assets/styles/cmps/DynamicModal.scss
@@ -166,7 +166,7 @@
             
             label{
                 width: rem(175px);
-                
+                align-items: center;
                 &:hover {
                     cursor: pointer;
                 }
