Fixed Payment page bug

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -56,8 +56,8 @@
 
          .package {
              font-weight: bold;
-             text-transform: uppercase;
-             font-size: rem(18px);
+            //  text-transform: uppercase;
+            //  font-size: rem(18px);
          }
 
          .package-desc {
