--- a/src/assets/styles/views/Checkout.scss
+++ b/src/assets/styles/views/Checkout.scss
@@ -3,7 +3,7 @@
     display: grid;
     margin-top: 25px;
 
-    .call-to-action {
+    .cta-container {
         grid-row: 1/1;
         justify-self: center;
     }
