Add MQ and mobile-first design to HomePage

--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -6,6 +6,12 @@
     }
 }
 
+@mixin for-small-layout {
+    @media (min-width: $mobile-breakpoint) {
+        @content;
+    }
+}
+
 @mixin for-narrow-layout {
     @media (min-width: $narrow-breakpoint) {
         @content;
