Hides all the arrows in the input number in the application

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -61,6 +61,15 @@ button {
     font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+input[type=number] {
+
+    &::-webkit-inner-spin-button,
+    ::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+}
 .star {
     width: 1em;
 }
