Change GigDetails carousel to fit in layout

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -48,6 +48,8 @@ $shadow-clr: #b2b3b681;
 //Sizes
 $arrow-btn-size: 48px;
 $card-carousel-height: 345px;
+$details-carousel-height: 444px;
+$details-carousel-width: 738px;
 
 // Breakpoints
 $mobile-breakpoint: 600px;
