--- a/src/assets/styles/cmps/ReviewPreview.scss
+++ b/src/assets/styles/cmps/ReviewPreview.scss
@@ -1,4 +1,4 @@
-.review-preview{
+.review-preview {
     display: grid;
     grid-gap: 1.5em;
     border-top: 1px solid #dadbdd;
@@ -6,26 +6,32 @@
     grid-template-areas: "img content";
     grid-template-columns: 2.5em 1fr;
     padding: 2.5em 0;
-    .seller-img{
+
+    .seller-img {
         border-radius: 50%;
         grid-area: img;
         height: em(48px);
         width: em(48px);
     }
-    .seller-info{
+
+    .seller-info {
         margin-bottom: 1.25em;
-        h4{
+
+        h4 {
             margin-bottom: .5em;
         }
-        .country{
+
+        .country {
             display: flex;
-            .flag{
+
+            .flag {
                 border-radius: 0;
                 height: em(20px);
                 margin-right: em(2px);
                 width: em(20px);
             }
-            span{
+
+            span {
                 color: $dark-clr-1;
                 font-size: 14px;
                 line-height: 21px;
@@ -34,7 +40,7 @@
         }
     }
 
-    .rate-info{
+    .rate-info {
         align-items: center;
         color: #62646a;
         display: flex;
@@ -42,33 +48,38 @@
         line-height: 1.3;
         margin-bottom: em(17px);
 
-        .divider{
+        .divider {
             border-right: 1px solid $light-clr2;
             height: 1.2142857143em;
             margin: .1428571429em .5714285714em;
         }
     }
-    .long-txt{
-        .book-desc{
+
+    .long-txt {
+        .book-desc {
             display: inline;
             line-height: rem(24px);
-           
+
         }
+
         margin-bottom: em(17px);
     }
+
     .helpful {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: em(12px);
         font-weight: 700;
         font-size: rem(14px);
-    .thums{
-        display: flex;
-        cursor: pointer;
-        gap:10px
-    }
-        img {
-          width: em(14px);
+
+        .thums {
+            display: flex;
+            cursor: pointer;
+            gap: em(5px);
         }
-      }
+
+        img {
+            width: em(14px);
+        }
+    }
 }
