Add narrow-tablet MQ to GigDetails

--- a/src/assets/styles/cmps/CategoryNav.scss
+++ b/src/assets/styles/cmps/CategoryNav.scss
@@ -58,7 +58,7 @@
         }
     }
 
-    @include for-xl-layout {
+    @include for-small-layout {
         .category-header {
             overflow: hidden;
 
