--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -31,7 +31,7 @@
 }
 
 @mixin for-xl-layout {
-    @media (max-width: $xl-breakpoint) {
+    @media (min-width: $xl-breakpoint) {
         @content;
     }
 }
