--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -1,9 +1,6 @@
 @import url(react-responsive-carousel/lib/styles/carousel.min.css);
 
 .gig-details {
-    //change later ~ Padding for large/xl MQs only
-    padding-inline: 32px;
-
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     justify-content: space-around;
@@ -11,10 +8,6 @@
 
     &>*:not(.cta-container) {
         grid-column: 1;
-    }
-
-    img {
-        margin: 0;
     }
 
 
@@ -111,6 +104,7 @@
                     img {
                         height: $details-carousel-height;
                         object-fit: contain;
+                        // object-fit: cover;
                     }
                 }
             }
@@ -152,5 +146,82 @@
     }
 
 
+    @include for-small-layout {}
+
+    @include for-narrow-layout {
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+
+        .cta-container {
+            grid-column: 1/-1;
+            grid-row: 3;
+            width: unset;
+            justify-self: unset;
+            position: unset;
+            top: unset;
+        }
+
+        .carousel-container {
+            max-width: unset;
+
+            .carousel {
+
+                &.carousel-slider {
+                    max-width: unset;
+
+                    .slide {
+
+                        img {
+                            object-fit: contain;
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+
+    @include for-normal-layout {
+        grid-template-columns: 1.5fr 1fr;
+
+        .cta-container {
+            grid-column: 2;
+            grid-row: 2;
+            position: sticky;
+            top: 12vh;
+            justify-self: end;
+            width: em(412px);
+        }
+
+        .carousel-container {
+            max-width: rem(740px);
+
+            .carousel {
+                width: 100%;
+
+                &.carousel-slider {
+                    height: rem($details-carousel-height);
+                    max-width: $details-carousel-width;
+
+                    .slide {
+
+                        img {
+                            height: $details-carousel-height;
+                            object-fit: cover;
+                        }
+                    }
+                }
+
+            }
+        }
+
+
+    }
+
+    @include for-large-layout {}
+
+    @include for-xl-layout {
+        padding-inline: rem(32px);
+    }
 
 }
