The MyGigs table is aware that Gig Packages exist

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -56,8 +56,8 @@
 
          .package {
              font-weight: bold;
-            //  text-transform: uppercase;
-            //  font-size: rem(18px);
+             //  text-transform: uppercase;
+             //  font-size: rem(18px);
          }
 
          .package-desc {
@@ -65,6 +65,7 @@
              font-weight: 400;
              letter-spacing: em(0.35px);
              color: $dark-clr-1;
+             line-height: 1.1;
          }
 
          .days-container {
@@ -106,6 +107,7 @@
 
          .continue {
              @include btn;
+             position: relative;
              display: block;
              text-align: center;
              height: rem(42px);
@@ -116,6 +118,12 @@
              letter-spacing: -0.05em;
              margin-block-end: em(12px);
              border-radius: em(5px);
+
+             .fa-arrow-right {
+                 position: absolute;
+                 right: 25px;
+
+             }
 
              &:hover {
                  background-color: darken($dark-clr-1, 20%);
